--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -251,6 +251,7 @@ Search Page
     position: fixed;
     width: 100%;
     height: 100%;
+    z-index: 999;
     top: 0;
     background: rgb(0 0 0 / 65%);
 }
@@ -321,6 +322,7 @@ Search Page
     width: 35px;
     display: flex;
     right: 10px;
+    z-index: 998;
     justify-content: center;
     align-items: center;
     transition: 0.5s ease-out;
